# sleeper

./: .coverage  main.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml  update.yml
api/: path_constants.py  test.py  user.py  user_test.py  utils.py
src/: main.py
src/api/: league.py  players.py  test.py  utils.py
src/static/: index.html  script.js
tests/: test_utils.py  user_test.py  user_test_class.py
