[project]
name = "sleeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "requests>=2.32.4",
    "standard>=1.0.3",
    "typing>=3.10.0.0",
]
[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = """
--cov=your_package 
--cov-report=term-missing 
--cov-report=html 
--tb=short 
-v
"""
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["api"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.autopep8]
max_line_length = 88
aggressive = 2
in_place = true
recursive = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 120 

[tool.ruff.lint]
select = ["E", "W"]
ignore = [ 
    "W291", # trailing whitespace
    "W293", # blank line containing whitespace
]

